--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <p>yes this is a index.html file made with inspect same with css file</p>
         <h1>this was made with inspect mode</h1>
+      <p>if you are seeing this  means this worked</p>
  <link href="style.css" rel="stylesheet" type="text/css" />
 
     <g id="domain">
